--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,9 @@ buildFeatures{
 }
 
 dependencies {
-
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
