--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,31 @@
         android:theme="@style/Theme.LibraryManagementADMIN"
         tools:targetApi="31">
         <activity
-            android:name=".Upload_book_details"
+            android:name=".Update_booksActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Returned_bookActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Request_detailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BookIssuedActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RequestIssueRecievedActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Upload_book_details"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
