--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ buildFeatures{
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.9.0'
+
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
